# StudioEval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PHASE_2_SUMMARY.md  README.md  SupportedDataSets.md  __init__.py  __version__.py  evaluation_summary.csv  pyproject.toml  studioeval.py
.github/workflows/: ci.yml  codeql.yml
config/: comm_config.py
core/: __init__.py  dataset_registry.py  evaluator.py  model_manager.py
eval_datasets/: default_evals.py
eval_datasets/custom/: custom_mcq.py  grammar.py  math.py
eval_datasets/custom/data/: coding_mcq_dataset.jsonl  creative_writing_mcq_dataset.jsonl  data_analysis_mcq_dataset.jsonl  elementary_math_dataset.jsonl  grammar_dataset.jsonl  hs_lower_university_math_dataset.jsonl  old_creative_writing_mcq_dataset.jsonl  productivity_mcq_dataset.jsonl  research_mcq_dataset.jsonl
eval_datasets/custom/data/coding/: csharp_coding_mcq_dataset.jsonl  js_ts_coding_mcq_dataset.jsonl  python_coding_mcq_dataset.jsonl  universal_coding_mcq_dataset.jsonl
eval_datasets/custom/data/writing/: fiction_writing_mcq_dataset.jsonl  poetry_writing_mcq_dataset.jsonl  technical_writing_mcq_dataset.jsonl
eval_datasets/huggingface/: arc.py  commonsense_qa.py  gsm8k.py  hellaswag.py  logiqa.py  mmlu.py  truthfulqa.py  winogrande.py
examples/: code_creative.json  communications_config.json  demo_model_summary.py  poc_arc.json  poc_gsm8k.json  poc_hellaswag.json  poc_mmlu.json  poc_openbookqa.json  poc_truthfulqa.json  poc_winogrande.json  run_full_benchmarks.json  run_model_set.txt  run_single_benchmark.json  usecase_coding_development.json  usecase_creative_writing.json  usecase_data_analysis.json  usecase_education.json  usecase_knowledge_work.json  usecase_productivity.json
implementations/: __init__.py  lmstudio_client.py  mock_client.py
interfaces/: __init__.py  model_client.py
models/: model_handling.py  model_loading.py
scripts/: bump_version.py  release.py
tests/: __init__.py  conftest.py
tests/e2e/: test_cli_workflows.py
tests/fixtures/: mock_datasets.py
tests/fixtures/data/: mock_grammar_dataset.jsonl
tests/integration/: test_config_error_handling.py  test_dataset_pipeline_integration.py  test_enhanced_evaluation.py  test_evaluation_flow.py  test_model_client_integration.py  test_parameter_precedence.py
tests/performance/: test_benchmarks.py
tests/unit/: test_cli.py  test_config.py  test_data_loading.py  test_dataset_evaluators.py  test_dataset_registry.py  test_default_datasets.py  test_logging.py  test_model_accuracy_summary.py  test_text_parsing.py  test_utils.py  test_working_utils.py
utils/: data_loading.py  logging.py  params.py  text_parsing.py  timing_utils.py
